Ensure tables are properly left-aligned and that addresses are centered.

--- a/src/styles.css
+++ b/src/styles.css
@@ -287,12 +287,14 @@ table {
     border-spacing: 0.5em;
     position: relative;
     left: -0.5em;
+    width: calc(100% + 0.5em);
 }
 th {
     text-align: left;
 }
 
-th.address-column {
+.address-column,
+.address-cell {
     text-align: center;
 }
 
